<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AbsensiActivity"
    tools:showIn="@layout/activity_absensi">

    <RelativeLayout
        android:id="@+id/dashboardAbsen"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#64c0ea"
        android:elevation="1dp"
        >
        <TextView
            android:id="@+id/textPersentaseBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textSize="100sp"
            android:textColor="@android:color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/textPersentaseBig"
            android:textColor="@android:color/white"
            android:gravity="bottom"
            android:textSize="40sp"
            android:text="@string/percent"/>

        <View
            android:id="@+id/dividerHorizontal"
            android:layout_below="@id/textPersentaseBig"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/textMataKuliahBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dividerHorizontal"
            android:layout_marginTop="10dp"
            android:text="@string/absensi_activity_name"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textDosenBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textMataKuliahBig"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="@string/absensi_layouter_name"
            />
    </RelativeLayout>

    <ListView
        android:layout_below="@id/dashboardAbsen"
        android:id="@+id/lvAbsensi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

</RelativeLayout>
