<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PasswordFragment">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttonbawah"
        android:gravity="center_vertical|center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="130dip"
            android:layout_height="130dip"
            app:civ_border_width="2dp"
            app:civ_border_color="@android:color/white"
            android:id="@+id/profile_picture"
            android:transitionName="@string/foto_profil_trans"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nama_lengkap"
            android:layout_marginTop="20dip"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:textSize="20dp"
            android:textAllCaps="true"
            android:id="@+id/nama_user"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/kelas"
            android:textColor="#ffffffff"
            android:textSize="15dp"
            android:textAllCaps="true"
            android:id="@+id/kelas_user"
            android:layout_marginBottom="50dip" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:layout_marginRight="50dip">

            <!--<TextView-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/password"-->
                <!--android:id="@+id/textView2"-->
                <!--android:layout_margin="5dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:textSize="15dip"-->
                <!--android:textColor="#ffffff" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_support"
                style="@style/TextLabel"
                theme="@style/TextLabel">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/password_input"
                android:textColor="@android:color/white"
                android:hint="@string/password"
                android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
